--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="filePull.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="transform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.h">
@@ -38,12 +41,21 @@
     <ClInclude Include="filePull.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="basic.frag">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="basic.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="new.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="new.vert">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
